syntax = "proto3";

package booking;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "booking_system/booking/proto;proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (BookingResponse);
  rpc GetBooking(GetBookingRequest) returns (BookingResponse);
  rpc UpdateBooking(UpdateBookingRequest) returns (BookingResponse);
  rpc DeleteBooking(DeleteBookingRequest) returns (google.protobuf.Empty);
  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
}

message Booking {
  int64 id = 1;
  int64 client_id = 2;
  int64 room_id = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  string status = 6;
}

message CreateBookingRequest {
  int64 client_id = 1;
  int64 room_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  string status = 5;
}

message GetBookingRequest {
  int64 id = 1;
}

message UpdateBookingRequest {
  int64 id = 1;
  int64 client_id = 2;
  int64 room_id = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  string status = 6;
}

message DeleteBookingRequest {
  int64 id = 1;
}

message ListBookingsRequest {
  int64 offset = 1;
  int64 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
  repeated Filter filters = 5;
}

message Filter {
  string key = 1;
  string value = 2;
}

message BookingResponse {
  int64 id = 1;
  int64 client_id = 2;
  int64 room_id = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  string status = 6;
}

message ListBookingsResponse {
  repeated BookingResponse bookings = 1;
}